# PortPlacement

./: CMakeLists.txt  SuperBuild.cmake
AutoPortPlacement/: CMakeLists.txt  qSlicerAutoPortPlacementModule.cxx  qSlicerAutoPortPlacementModule.h  qSlicerAutoPortPlacementModuleWidget.cxx  qSlicerAutoPortPlacementModuleWidget.h
AutoPortPlacement/Logic/: CMakeLists.txt  vtkSlicerAutoPortPlacementLogic.cxx  vtkSlicerAutoPortPlacementLogic.h
AutoPortPlacement/Logic/CMake/: FindNLopt.cmake
AutoPortPlacement/Logic/collisions/: CMakeLists.txt  collisions.cxx  collisions.h
AutoPortPlacement/Logic/data/: passive.robot.xml
AutoPortPlacement/Logic/davinci-kinematics/: CMakeLists.txt  davinci.cxx  davinci.h  davinci.h.in
AutoPortPlacement/Logic/optim/: CMakeLists.txt  optim.cxx  optim.h
AutoPortPlacement/Logic/optim/nlopt/: CMakeLists.txt
AutoPortPlacement/Logic/tests/: CMakeLists.txt  clear-ut-test.cxx  config-ut-test.cxx  da-vinci-params-load-test.cxx  da-vinci-passive-ik-test.cxx  find-feasible-plan-test.cxx  intra-ik-test.cxx  jacobian-test.cxx  min-distance-test.cxx  passive-lr-optim-test.cxx
AutoPortPlacement/Logic/tests/data/: davinci-parameters.xml
AutoPortPlacement/Resources/: qSlicerAutoPortPlacementModule.qrc
AutoPortPlacement/Resources/UI/: qSlicerAutoPortPlacementFooBarWidget.ui  qSlicerAutoPortPlacementModuleWidget.ui
AutoPortPlacement/Widgets/: qSlicerAutoPortPlacementFooBarWidget.cxx  qSlicerAutoPortPlacementFooBarWidget.h
PortPlacement/: CMakeLists.txt  PortPlacement.py
SuperBuild/: External_NLopt.cmake
